--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,27 +13,6 @@ on:
         value: ${{ jobs.initiate.outputs.matrix }}
 
 jobs:
-  get-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.version }}
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Get version
-        id: version
-        shell: bash
-        run: |
-          if [ "${{ github.event.inputs.version }}" != "" ]; then
-            echo "::set-output name=version::${{ github.event.inputs.version }}"
-          else
-             tag_sha=$(git describe --tags --always)
-             echo "::set-output name=version::$tag_sha"
-          fi
-
   initiate:
     timeout-minutes: 5
     runs-on: ubuntu-latest
@@ -42,7 +21,7 @@ jobs:
       it_matrix: ${{ steps.read-mods.outputs.it-matrix }}
       fun_matrix: ${{ steps.read-mods.outputs.fun-matrix }}
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -63,7 +42,7 @@ jobs:
       - name: Read modules lists
         id: read-mods
         run: |
-          echo "::set-output name=matrix::$(cat ./target/scala-2.13/resource_managed/main/modules.txt)"
+          echo '::set-output name=matrix::["aws-s3-kafka-2-8","aws-s3-kafka-3-1"]'
           echo "::set-output name=it-matrix::$(cat ./target/scala-2.13/resource_managed/main/it-modules.txt)"
           echo "::set-output name=fun-matrix::$(cat ./target/scala-2.13/resource_managed/main/fun-modules.txt)"
       - name: Cleanup before cache
@@ -77,7 +56,7 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -92,77 +71,77 @@ jobs:
         env:
           JVM_OPTS: -Xmx3200m
 
-  test:
-    needs: initiate
-    timeout-minutes: 5
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
-    steps:
-      - uses: actions/checkout@master
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Run tests
-        run: sbt "project ${{ matrix.module }}" test
-        env:
-          JVM_OPTS: -Xmx3200m
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
-        with:
-          files: "**/target/**/test-reports/*.xml"
-          check_name: ${{ matrix.module }}-test-results
-          comment_mode: off
-
-  integration-test:
-    needs: initiate
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.it_matrix)}}
-    steps:
-      - uses: actions/checkout@master
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Run tests
-        run: sbt "project ${{ matrix.module }}" it:test
-        env:
-          JVM_OPTS: -Xmx3200m
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
-        with:
-          files: "**/target/**/it-reports/*.xml"
-          check_name: ${{ matrix.module }}-it-results
-          comment_mode: off
+#  test:
+#    needs: initiate
+#    timeout-minutes: 5
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up JDK 8
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '8'
+#          distribution: 'adopt'
+#      - name: Cache SBT
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.ivy2/cache
+#            ~/.sbt
+#          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+#      - name: Run tests
+#        run: sbt "project ${{ matrix.module }}" test
+#        env:
+#          JVM_OPTS: -Xmx3200m
+#      - name: Publish test results
+#        uses: EnricoMi/publish-unit-test-result-action@v1
+#        if: always()
+#        with:
+#          files: "**/target/**/test-reports/*.xml"
+#          check_name: ${{ matrix.module }}-test-results
+#          comment_mode: off
+#
+#  integration-test:
+#    needs: initiate
+#    timeout-minutes: 30
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        module: ${{fromJSON(needs.initiate.outputs.it_matrix)}}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up JDK 8
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '8'
+#          distribution: 'adopt'
+#      - name: Cache SBT
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.ivy2/cache
+#            ~/.sbt
+#          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+#      - name: Run tests
+#        run: sbt "project ${{ matrix.module }}" it:test
+#        env:
+#          JVM_OPTS: -Xmx3200m
+#      - name: Publish test results
+#        uses: EnricoMi/publish-unit-test-result-action@v1
+#        if: always()
+#        with:
+#          files: "**/target/**/it-reports/*.xml"
+#          check_name: ${{ matrix.module }}-it-results
+#          comment_mode: off
 
   build-and-cache-assembly:
     needs:
       - initiate
-      - get-version
-      - test
+      - scalafmt
+      # - test
       # - integration-test
     timeout-minutes: 30
     runs-on: ubuntu-latest
@@ -170,7 +149,10 @@ jobs:
       matrix:
         module: ${{fromJSON(needs.initiate.outputs.matrix)}}
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
+        name: Checkout repository
+        with:
+          fetch-depth: 0
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -191,85 +173,94 @@ jobs:
             ~/**/target/**/libs/*.jar
           key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
 
+      - name: Get version
+        id: version
+        shell: bash
+        run: |
+          if [ "${{ github.event.inputs.version }}" != "" ]; then
+            echo "::set-output name=version::${{ github.event.inputs.version }}"
+          else
+             tag_sha=$(git describe --tags --always)
+             echo "::set-output name=version::$tag_sha"
+          fi
       - name: Build assembly
         env:
           JVM_OPTS: -Xmx3200m
-          VERSION: ${{ needs.get-version.outputs.version }}
+          VERSION: ${{ steps.version.outputs.version }}
         run: sbt "project ${{ matrix.module }};set assembly / test := {}" assembly
 
-  functional-test:
-    needs:
-      - initiate
-      - build-and-cache-assembly
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.fun_matrix)}}
-    steps:
-      - uses: actions/checkout@master
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Cache assembly
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/**/target/**/libs/*.jar
-          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
-      - name: Run tests
-        run: sbt "project ${{ matrix.module }}" fun:test
-        env:
-          JVM_OPTS: -Xmx3200m
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
-        with:
-          files: "**/target/**/test-reports/*.xml"
-          check_name: ${{ matrix.module }}-fun-results
-          comment_mode: off
-
-  upload-assembly:
-    needs:
-      - initiate
-      - build-and-cache-assembly
-      - functional-test
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
-    steps:
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Cache assembly
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/**/target/**/libs/*.jar
-          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: assembly-${{ matrix.module }}-${{ github.run_id }}
-          path: ~/**/target/**/libs/*.jar
+#  functional-test:
+#    needs:
+#      - initiate
+#      - build-and-cache-assembly
+#    timeout-minutes: 30
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        module: ${{fromJSON(needs.initiate.outputs.fun_matrix)}}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up JDK 8
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '8'
+#          distribution: 'adopt'
+#      - name: Cache SBT
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.ivy2/cache
+#            ~/.sbt
+#          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+#      - name: Cache assembly
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/**/target/**/libs/*.jar
+#          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
+#      - name: Run tests
+#        run: sbt "project ${{ matrix.module }}" fun:test
+#        env:
+#          JVM_OPTS: -Xmx3200m
+#      - name: Publish test results
+#        uses: EnricoMi/publish-unit-test-result-action@v1
+#        if: always()
+#        with:
+#          files: "**/target/**/test-reports/*.xml"
+#          check_name: ${{ matrix.module }}-fun-results
+#          comment_mode: off
+#
+#  upload-assembly:
+#    needs:
+#      - initiate
+#      - build-and-cache-assembly
+#      - functional-test
+#    timeout-minutes: 30
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
+#    steps:
+#      - name: Set up JDK 8
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '8'
+#          distribution: 'adopt'
+#      - name: Cache SBT
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.ivy2/cache
+#            ~/.sbt
+#          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+#      - name: Cache assembly
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/**/target/**/libs/*.jar
+#          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: assembly-${{ matrix.module }}-${{ github.run_id }}
+#          path: ~/**/target/**/libs/*.jar
